# iree

./: .gitmodules  BUDDY_GEMMINI_INTEGRATION.md  IREE_SCHEDULING_INVESTIGATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  iree-opt__help.txt  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake  test_gemmini.mlir
compiler/plugins/: iree_compiler_plugin.cmake
compiler/plugins/gemmini/: CMakeLists.txt  PluginRegistration.cpp
compiler/plugins/input/Torch/InputConversion/: ConvertTMTensorToLinalgExt.cpp  Passes.cpp
compiler/src/iree/: run_gemmini_end_to_end.sh
compiler/src/iree/compiler/API/Internal/: CompilerDriver.cpp
compiler/src/iree/compiler/Codegen/Common/: ConvertUnsupportedFloatArithPass.cpp
compiler/src/iree/compiler/Codegen/Common/test/: BUILD.bazel  CMakeLists.txt  convert_unsupported_float_arith.mlir
compiler/src/iree/compiler/Codegen/ExternalInterfaces/: CPUEncodingExternalModels.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp  Passes.cpp  Passes.h  VectorContractCustomKernels.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/test/: BUILD.bazel  CMakeLists.txt  riscv64_rvv_vector_lowering.mlir  select_riscv_opu_lowering_strategy.mlir  select_riscv_spacemit_lowering_strategy.mlir  vector_contract_to_riscv_rvv_intrinsics.mlir
compiler/src/iree/compiler/Codegen/Utils/: CPUUtils.cpp  CPUUtils.h
compiler/src/iree/compiler/Dialect/LinalgExt/IR/: AggregatedOpInterfaceImpl.cpp
compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/: TileAttention.cpp
compiler/src/iree/compiler/Dialect/Stream/Transforms/: CMakeLists.txt
compiler/src/iree/compiler/GlobalOptimization/: CMakeLists.txt  FuseQuantizedMatmulBias.cpp  Passes.cpp  Passes.td
compiler/src/iree/compiler/Pipelines/: Pipelines.cpp
compiler/src/iree/compiler/PluginAPI/: Client.h  PluginManager.h
compiler/src/iree/compiler/Tools/: init_iree_dialects.h  init_iree_passes.h
docs/website/docs/developers/design-docs/: SCHEDULING_QUICK_REFERENCE.md  SCHEDULING_README.md  custom-scheduler-implementation-guide.md  iree-scheduling-deep-dive.md
experimental/iree_evo/: __init__.py  evaluator.py  knowledge_base.py  main.py  prompts.py  slicer.py  verification.py
iree-evo/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  setup.py
iree-evo/examples/: QUANTIZATION_USE_CASE.md  QUICK_START_QUANTIZATION.md  batch_matmul.mlir  matmul.mlir  quantization_optimization_demo.py  quantized_matmul_float.mlir  quantized_matmul_integer.mlir  usage_example.py
iree-evo/iree_evo/: __init__.py  cli.py  config.py  orchestrator.py  state_manager.py
iree-evo/iree_evo/agents/: __init__.py  coder_agent.py  optimization_menu.py  planner_agent.py
iree-evo/iree_evo/execution/: __init__.py  benchmark_runner.py  compiler_wrapper.py
iree-evo/iree_evo/perception/: __init__.py  error_log_cleaner.py  mlir_slicer.py
iree-evo/iree_evo/verification/: __init__.py  baseline_manager.py  test_generator.py
iree-evo/tests/: test_mlir_slicer.py
runtime/src/iree/base/: alignment.h
runtime/src/iree/base/internal/: cpu.c
runtime/src/iree/builtins/ukernel/arch/riscv_64/: CMakeLists.txt  bme.h  common_riscv_64.h  mmt4d_riscv_64_entry_point.c  mmt4d_riscv_64_tiles.inl  mmt4d_riscv_64_v copy.c  mmt4d_riscv_64_v.c  mmt4d_riscv_64_v_i8.c  mmt4d_riscv_64_zvfh copy.c  pack_riscv_64_entry_point copy.c  query_tile_sizes_riscv_64_entry_point.c
runtime/src/iree/builtins/ukernel/tools/: mmt4d_test.c
runtime/src/iree/hal/local/elf/: elf_module.c
runtime/src/iree/hal/local/elf/arch/: riscv.c
runtime/src/iree/schemas/: cpu_feature_bits.inl
runtime/src/iree/vm/: invocation.c  ref.c
runtime/src/iree/vm/bytecode/: dispatch.c  dispatch_util.h  module.c  verifier.c
samples/: CMakeLists.txt
samples/concurrent_scheduling/: .gitignore  BUILD.bazel  CMakeLists.txt  IMPLEMENTATION.md  QUICKSTART.md  README.md  SUMMARY.md  compile_models.sh  concurrent_scheduling_oracle.c  concurrent_scheduling_vanilla.c  model_a_conv.mlir  model_b_dense.mlir  model_c_residual.mlir  pipeline_vanilla_async.mlir  test_example.sh
samples/promise_devices_layer/: CMakeLists.txt  main.c  multi_core_dispatch.vmfb  run.sh  test.mlir
samples/quantization_examples/: QUANTIZATION_SUPPORT.md  README.md  fp8_quantization.py  int4_quantization.py  int8_quantization.py  quantize_mobilenet_v2.py  test.sh
samples/simple_embedding/: CMakeLists.txt  device_embedded_sync.c  simple_embedding.c  simple_embedding_test.mlir  static_elf_allocator.c  static_elf_allocator.h
samples/simple_embedding_fc/: CMakeLists.txt  device_embedded.c  device_embedded_sync.c  device_vmvx_sync.c  model.mlir  simple_embedding.c  simple_embedding_test.mlir  system_shims.c
samples/simple_embedding_glpdepth/: CMakeLists.txt  device_embedded_sync.c  format_image.py  image.py  simple_embedding.c
samples/simple_embedding_ukernel/: CMakeLists.txt  device_embedded_sync.c  mm_1024.mlir  mm_128.mlir  mm_2048.mlir  mm_256.mlir  mm_512.mlir  mm_64.mlir  simple_embedding.c
tests/e2e/SpacemiT/: compile_opu.sh  compile_rvv.sh  compile_vmadot.sh  conv_fp8.mlir  conv_i8.mlir  conv_q_i8.mlir  matmul_fp8.mlir  matmul_i8.mlir  matmul_q_i8.mlir
(+1 files in other folders)
